Finished portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,20 +7,96 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="./assets/styles.css" />
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
-  <body>
+  <body class="body-universal">
 
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="./portfolio.html">Portfolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="https://github.com/tymathenanavbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">About Me<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html" tabindex="-1" aria-disabled="true">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
-    <section>
-
-    </section>
+    <div class="container content-box">
+      <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Basic Portfolio</h5>
+                  <a href="https://github.com/tymathena/Basic-Portfolio" class="btn btn-primary">Repository</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Coming Soon</h5>
+                  <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Coming Soon</h5>
+                  <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                </div>
+            </div>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col">
+              <div class="card" style="width: 18rem;">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Coming Soon</h5>
+                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card" style="width: 18rem;">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Coming Soon</h5>
+                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="card" style="width: 18rem;">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Coming Soon</h5>
+                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
 
     <footer>
-
+      <div class="col-md-12 footer-universal">
+        Created Using Bootstrap
+      </div>
     </footer>
 
   </body>
