--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,38 @@
     <meta charset="utf-8"/>
   </head>
 
-  <body>
+  <body class="body-universal">
 
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="./contact.html">Contact Me</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">About Me<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
+
+
 
     <section>
 
     </section>
 
     <footer>
-
+      <div class="col-md-12 footer-universal">
+        Created Using Bootstrap
+      </div>
     </footer>
 
   </body>
