--- a/contact.html
+++ b/contact.html
@@ -2,47 +2,70 @@
 
 <html>
 
-  <head>
-    <title>Tyler Mathena's Contact Info</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="./assets/styles.css" />
-    <meta charset="utf-8"/>
-  </head>
+<head>
+  <title>Tyler Mathena's Contact Info</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="./assets/styles.css" />
+  <meta charset="utf-8" />
+</head>
 
-  <body class="body-universal">
+<body class="body-universal">
 
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="./contact.html">Contact Me</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="./contact.html">Contact Me</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">About Me<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
-
-
-    <section>
-
-    </section>
-
-    <footer>
-      <div class="col-md-12 footer-universal">
-        Created Using Bootstrap
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">About Me<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a>
+          </li>
+        </ul>
       </div>
-    </footer>
+    </nav>
+  </header>
 
-  </body>
+  <section>
+    <div class="container content-box">
+      <div class="row">
+        <div class="col-12">
+          <h3 id="contact-head">Your Name</h3>
+          <input type="text" value="EX: Tyler Mathena" class="short-input">
+          <input type="submit" value="Submit" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h3>Your Email Address</h3>
+          <input type="text" value="EX: tymathena@gmail.com" class="short-input">
+          <input type="submit" value="Submit">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h3>Message</h3>
+          <input type="text" value="EX: VERVVX" class="message-input">
+          <input type="submit" value="Submit">
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="col-md-12 footer-universal">
+      Created Using Bootstrap
+    </div>
+  </footer>
+
+</body>
 
 </html>
