--- a/index.html
+++ b/index.html
@@ -34,11 +34,21 @@
       </nav>
     </header>
 
-
-
-    <section>
-
-    </section>
+    <div class="container content-box">
+      <div class="row">
+        <div class="col-3">
+          <div class="card" style="width: 18rem;">
+              <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+              </div>
+          </div>
+        </div>
+        <div class="col-9">
+          <p class="paragraph">
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptatibus repellat placeat ducimus ad id maxime itaque! Dolorem, sapiente illo eveniet officiis sit illum cum minus aperiam, iste ipsam facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, maxime laborum corporis soluta error distinctio aliquam, omnis ex officia quidem eaque culpa modi amet corrupti assumenda debitis? Debitis, animi numquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur incidunt culpa dolore modi, distinctio magni in accusantium voluptates ab tempora commodi aspernatur velit mollitia earum repudiandae dolores harum numquam amet!
+          </p>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="col-md-12 footer-universal">
