--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="./portfolio.html">Portfolio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="https://github.com/tymathenanavbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="col-sm-12 col-md-4lapse" data-target="https://github.com/tymathenanavbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="col-sm-12 col-md-4lapse navbar-col-sm-12 col-md-4lapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">About Me<span class="sr-only">(current)</span></a>
@@ -34,7 +34,7 @@
 
     <div class="container content-box">
       <div class="row">
-        <div class="col">
+        <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="row">
-          <div class="col">
+          <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
                   <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -72,7 +72,7 @@
                   </div>
               </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
                   <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -81,7 +81,7 @@
                   </div>
               </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
                   <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -94,7 +94,7 @@
     </div>
 
     <footer>
-      <div class="col-md-12 footer-universal">
+      <div class="col-sm-12 col-md-4-md-12 footer-universal">
         Created Using Bootstrap
       </div>
     </footer>
