added references to new projects:

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,28 +36,31 @@
       <div class="row">
         <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <img src="./assets/images/portfolio.jpg" class="card-img-top" alt="..." height="300px" width="200px">
                 <div class="card-body">
                   <h5 class="card-title">Basic Portfolio</h5>
-                  <a href="https://github.com/tymathena/Basic-Portfolio" class="btn btn-primary">Repository</a>
+                  <a href="https://tymathena.github.io/Basic-Portfolio/" class="btn btn-primary">Deployed Site</a>
+                  <a href="https://github.com/tymathena/Basic-Portfolio" class="btn btn-secondary">Repository</a>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <img src="./assets/images/Sheev.jpg" class="card-img-top" alt="..." height="300px" width="200px">
                 <div class="card-body">
-                  <h5 class="card-title">Coming Soon</h5>
-                  <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                  <h5 class="card-title">Star Wars RPG</h5>
+                  <a href="https://tymathena.github.io/Fighting-Game/" class="btn btn-primary">Deployed Site</a>
+                  <a href="https://github.com/tymathena/Fighting-Game/" class="btn btn-secondary">Repository</a>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-lg-4">
             <div class="card" style="width: 18rem;">
-                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                <img src="./assets/images/JobSearch.jpg" class="card-img-top" alt="..." height="300px" width="200px">
                 <div class="card-body">
-                  <h5 class="card-title">Coming Soon</h5>
-                  <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                  <h5 class="card-title">Job Search Web App</h5>
+                  <a href="https://bogacsabuncu.github.io/TeamRed/" class="btn btn-primary">Deployed Site</a>
+                  <a href="https://github.com/BogacSabuncu/TeamRed" class="btn btn-secondary">Repository</a>
                 </div>
             </div>
         </div>
@@ -65,28 +68,32 @@
       <div class="row">
           <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
-                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <img src="./assets/images/trivia.png" class="card-img-top" alt="..." height="300px" width="200px">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon</h5>
-                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                    <h5 class="card-title">Trivia Web App</h5>
+                    <a href="https://tymathena.github.io/Trivia-Game/" class="btn btn-primary">Deployed Site</a>
+                    <a href="https://github.com/tymathena/Trivia-Game" class="btn btn-secondary">Repository</a>
+                    
                   </div>
               </div>
           </div>
           <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
-                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="..." height="300px" width="200px">
                   <div class="card-body">
                     <h5 class="card-title">Coming Soon</h5>
                     <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                    <a href="https://github.com/tymathena" class="btn btn-secondary">Repository</a>
                   </div>
               </div>
           </div>
           <div class="col-sm-12 col-lg-4">
               <div class="card" style="width: 18rem;">
-                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="..." height="300px" width="200px">
                   <div class="card-body">
                     <h5 class="card-title">Coming Soon</h5>
                     <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
+                    <a href="https://github.com/tymathena" class="btn btn-secondary">Repository</a>
                   </div>
               </div>
           </div>
