Added more projects to portfolio page

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -81,9 +81,9 @@
               <div class="card" style="width: 18rem;">
                   <img src="https://via.placeholder.com/150" class="card-img-top" alt="..." height="300px" width="200px">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon</h5>
-                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
-                    <a href="https://github.com/tymathena" class="btn btn-secondary">Repository</a>
+                    <h5 class="card-title">Full Stack Attack (Game)</h5>
+                    <a href="https://serene-sea-50186.herokuapp.com/" class="btn btn-primary">Deployed Site</a>
+                    <a href="https://github.com/tymathena/full-stack-attack" class="btn btn-secondary">Repository</a>
                   </div>
               </div>
           </div>
@@ -91,9 +91,9 @@
               <div class="card" style="width: 18rem;">
                   <img src="https://via.placeholder.com/150" class="card-img-top" alt="..." height="300px" width="200px">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon</h5>
-                    <a href="https://github.com/tymathena" class="btn btn-primary">Repository</a>
-                    <a href="https://github.com/tymathena" class="btn btn-secondary">Repository</a>
+                    <h5 class="card-title">Onion News Scraper</h5>
+                    <a href="https://tranquil-sea-24302.herokuapp.com/" class="btn btn-primary">Deployed Site</a>
+                    <a href="https://github.com/tymathena/News-Scraper" class="btn btn-secondary">Repository</a>
                   </div>
               </div>
           </div>
@@ -102,7 +102,7 @@
 
     <footer>
       <div class="col-sm-12 col-md-4-md-12 footer-universal">
-        Created Using Bootstrap
+        tymathena@gmail.com
       </div>
     </footer>
 
