--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-3">
           <div class="card" style="width: 18rem;">
-              <img src="./assets/images/profile.jpg" height="300px" width="175px" class="card-img-top">
+              <img src="" height="300px" width="175px" class="card-img-top">
           </div>
         </div>
         <div class="col-9">
@@ -58,7 +58,7 @@
 
     <footer>
       <div class="col-md-12 footer-universal">
-        Created Using Bootstrap
+        
       </div>
     </footer>
 
